[gd_scene load_steps=6 format=3 uid="uid://drrtjspoy4dbo"]

[ext_resource type="Script" path="res://scenes/game/game_ui/save_slot.gd" id="1_eqc1c"]
[ext_resource type="Script" path="res://script/theme_button.gd" id="2_xdbvq"]
[ext_resource type="Script" path="res://script/theme_label.gd" id="3_pv60t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pii84"]
bg_color = Color(0.996078, 0.631373, 0.0117647, 0.313726)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnhvg"]
bg_color = Color(0.996078, 0.631373, 0.0117647, 1)

[node name="SaveSlot" type="MarginContainer"]
offset_right = 128.0
offset_bottom = 169.0
script = ExtResource("1_eqc1c")
game_scene_path = "res://scenes/game/game_ui.tscn"

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_pii84")
theme_override_styles/fill = SubResource("StyleBoxFlat_lnhvg")
fill_mode = 3
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SlotButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer3/Slot3Button")
focus_neighbor_top = NodePath("../../../../../../../LightModeButton")
focus_neighbor_right = NodePath("../../VBoxContainer2/Slot2Button")
focus_neighbor_bottom = NodePath("../../../OptionButton")
theme_override_font_sizes/font_size = 56
text = "1
"
icon_alignment = 1
script = ExtResource("2_xdbvq")

[node name="SlotFinishedLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0 %"
horizontal_alignment = 1
script = ExtResource("3_pv60t")

[node name="RestButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer3/Slot3Button")
focus_neighbor_top = NodePath("../../../../../../../LightModeButton")
focus_neighbor_right = NodePath("../../VBoxContainer2/Slot2Button")
focus_neighbor_bottom = NodePath("../../../OptionButton")
theme_override_font_sizes/font_size = 24
text = "Reset"
icon_alignment = 1
script = ExtResource("2_xdbvq")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="pressed" from="VBoxContainer/SlotButton" to="." method="_on_slot_button_pressed"]
[connection signal="button_down" from="VBoxContainer/RestButton" to="." method="_on_rest_button_button_down"]
[connection signal="button_up" from="VBoxContainer/RestButton" to="." method="_on_rest_button_button_up"]
